--- a/_posts/2018-09-06-intro.md
+++ b/_posts/2018-09-06-intro.md
@@ -1,3 +1,7 @@
+---
+title: "Intro"
+date: 2018-09-06
+---
 # Qui suis-je ?
 Je suis passionné par l'informatique
 > Je sais ce n'est pas original !
